--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ MONGODB_URL="mongodb+srv://Sammireku:Samuelmireku1234@cluster0.kxqujui.mongodb.n
 
 CLOUDINARY_CLOUD_NAME="dzjpsgbvd"
 CLOUDINARY_API_KEY="977664679769239"
-CLOUDINARY_SECRET_KEY="RZ6N0Y26T9tjYFbR1P_J_tl3AE0"
+CLOUDINARY_API_SECRET="RZ6N0Y26T9tjYFbR1P_J_tl3AE0"
